# case_study

./: .gitignore  README.md  demo.ipynb  docker-compose.yaml  pyproject.toml  run_docai.py
outputs/payslips_output/: 1.json  1_pretty.json  2.json  2_pretty.json  3.json  3_pretty.json
outputs/receipts_output/: 1.json  1_pretty.json  2.json  2_pretty.json  3.json  3_pretty.json  4.json  4_pretty.json  5.json  5_pretty.json
src/: utils.py
src/configs/: worflow_config.yaml
src/extract/: workflow_client.py
src/notebooks/: patterns.ipynb
src/scripts/: prettify_documents.py
src/similarity_search/: similarity_search.py
src/tip_generation/: tips_cluster_based.py  tips_recommendation_system.py
